group = 'dev.fusionize'
version = '0.0.1-SNAPSHOT'
description = 'fusionize-orchestrator'

repositories {
    mavenCentral()
}

buildscript {
    ext{
        springBootVersion  = '3.5.6'
        springBootDependencyMangementVersion  = '1.1.7'
        springAiVersion = '1.0.3'
    }
}

subprojects {
    apply plugin: 'java'
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }
    dependencies {
        testImplementation platform('org.junit:junit-bom:5.10.0')
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }
    repositories {
        mavenCentral()
    }
    tasks.named('test') {
        useJUnitPlatform()
        testLogging {
            showStandardStreams = true
        }
        jvmArgs '-XX:+EnableDynamicAgentLoading'
    }
}

